[project]
name = "web-and-concurrency-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "locust>=2.43.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "rocketmq-python-client>=5.1.0",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]
